--- a/chocolate/index.html
+++ b/chocolate/index.html
@@ -14,7 +14,7 @@
             <div class="main_width">
                 <img src="images/logo.png" class="nav_logo"/>
                 <div class="nav_cloud">
-                    <p class="nav_cloud_par">contact@chocolate.com </br> <span class="nav_cloud_no">666-657-098</span></p>
+                    <p class="nav_cloud_par">contact@chocolate.com <br> <span class="nav_cloud_no">666-657-098</span></p>
                 </div>
                 <img src="images/Layer-8.png" class="nav_cloud_little1"/>
                 <img src="images/Layer-8.png" class="nav_cloud_little2"/>
@@ -40,8 +40,8 @@
         <div class="main_width row">
             <div class="history_descr">
                 <h3>The historical location</h3>
-                <img src="images/Layer 10.jpg"/>
-                <p>Sweet roll souffl├ę chocolate bar toffee icing. Sweet cotton candy carrot cake wafer. Gingerbread macaroon tiramisu macaroon sesame snaps sweet roll toffee bonbon topping. Icing candy canes carrot cake cookie chocolate cake powder bear claw. Danish unerdwear.com tiramisu cookie biscuit danish liquorice. Marzipan pie halvah. Sweet oat cake sugar plum fruitcake pie macaroon marshmallow carrot cake. Pastry bear claw jujubes dessert chocolate bar sesame snaps. Gingerbread applicake jelly-o candy chocolate marzipan. Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah  drag├ęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
+                <img src="images/Layer 10.jpg" class="history_descr_img"/>
+                <p>Sweet roll soufflę chocolate bar toffee icing. Sweet cotton candy carrot cake wafer. Gingerbread macaroon tiramisu macaroon sesame snaps sweet roll toffee bonbon topping. Icing candy canes carrot cake cookie chocolate cake powder bear claw. Danish unerdwear.com tiramisu cookie biscuit danish liquorice. Marzipan pie halvah. Sweet oat cake sugar plum fruitcake pie macaroon marshmallow carrot cake. Pastry bear claw jujubes dessert chocolate bar sesame snaps. Gingerbread applicake jelly-o candy chocolate marzipan. Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah  dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
             </div>
             <div class="history_words">
                 <h4>Chocolate bar</h4>
@@ -49,10 +49,56 @@
             </div>
         </div>
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <footer></footer>
+    <section class="work">
+        <div class="main_width row">
+            <div class="work_descr">
+                <h3>Our work</h3>
+                <p class="work_par">Jelly beans jujubes candy cookie macaroon candy cheesecake.<br><br>Dessert wafer chupa chups chocolate cake halvah topping powder sesame snaps croissant. Applicake toffee sugar plum macaroon dragęe cheesecake icing powder. Unerdwear.com sesame snaps ice cream cotton candy.</p>
+            </div>
+            <div class="work_pic">
+                <img src="images/Layer 23.jpg" class="work_descr_img1"/>
+                <img src="images/Layer 22.jpg" class="work_descr_img2"/>
+                <img src="images/Layer 21.jpg" class="work_descr_img3"/>
+                <img src="images/Layer 20.jpg" class="work_descr_img4"/>
+                <img src="images/Layer 19.jpg" class="work_descr_img5"/>
+                <img src="images/Layer 18.jpg" class="work_descr_img6"/>
+            </div>
+        </div>
+    </section>
+    <section class="food">
+        <div class="food_intro main_width row">
+            <h3>The best food in the world</h3>
+            <p class="food_intro_par">Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
+        </div>
+        <div class="food_background row"></div>
+        <div class="food_descr main_width row">
+            <div>
+                <p class="food_descr_par1">Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
+                <p class="food_descr_par2">Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
+                <img src="images/kula.png" class="food_descr_img"/>
+            </div>
+        </div>
+    </section>
+    <section class="products">
+        <div class="main_width row">
+            <div class="products_background"></div>
+            <div class="products_descr">
+                <h3>Yummy, yummy muffin</h3>
+                <p>Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
+                <a href="#">read more</a>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="main_width row">
+            <p><span>PHONE: </span>636-965-589</p>
+            <p><span>PLACE: </span>Warszawa</p>
+            <p><span>EMAIL: </span>contact@chocolate.com</p>
+            <p><span>TWITTER: </span>chocolate</p>
+            <hr>
+            <p>&copy; Copyright THE BEST Chocolate IN THE WORLD - 2013. &#8226; All rights reserved. &#8226; Mail contact@chocolate.com</p>
+        </div>
+    </footer>
 </body>
 <script src="js/app.js" type="text/javascript"></script>
 </html>
