--- a/chocolate/index.html
+++ b/chocolate/index.html
@@ -11,21 +11,21 @@
 <body>
     <header>
         <nav class="nav_black row">
-            <div class="main_width">
+            <div class="main_width col-sm-12">
                 <img src="images/logo.png" class="nav_logo"/>
                 <div class="nav_cloud">
                     <p class="nav_cloud_par">contact@chocolate.com <br> <span class="nav_cloud_no">666-657-098</span></p>
                 </div>
                 <img src="images/Layer-8.png" class="nav_cloud_little1"/>
                 <img src="images/Layer-8.png" class="nav_cloud_little2"/>
-                <img src="images/Layer-8.png" class="nav_cloud_little3"/>           
+                <img src="images/Layer-8.png" class="nav_cloud_little3"/>
                 <ul class="menu">
-                    <span></span>
-                    <li>START</li>
-                    <li>ABOUT</li>
-                    <li>OFFER</li>
-                    <li>GALLERY</li>
-                    <li>CONTACT</li>
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                    <li><a href="#">START</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">OFFER</a></li>
+                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="#">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
