--- a/chocolate/index.html
+++ b/chocolate/index.html
@@ -30,22 +30,35 @@
             </div>
         </nav>
         <section class="header_banner row">
-            <div class="main_width header_banner_pic">
-                <h3>Let&#8217;s talk about fruits</h3>
-                <p class="header_banner_par">Cookie gummi bears chupa chups. Icing lollipop sugar plum dessert. caramels tiramisu. Halvah gingerbread caramels cotton candy. sugar plum caramels topping liquorice jelly beans bonbon.</p>
-            </div>
+            <div class="main_width header_banner_pic col-sm-12"></div>
+            <h3>Let&#8217;s talk about fruits</h3>
+            <p class="header_banner_par">Cookie gummi bears chupa chups. Icing lollipop sugar plum dessert. caramels tiramisu. Halvah gingerbread caramels cotton candy. sugar plum caramels topping liquorice jelly beans bonbon.</p>
         </section>
     </header>
     <section class="history">
         <div class="main_width row">
-            <div class="history_descr">
+            <div class="history_descr col-sm-12 col-md-12 col-lg-12">
                 <h3>The historical location</h3>
                 <img src="images/Layer 10.jpg" class="history_descr_img"/>
                 <p>Sweet roll soufflę chocolate bar toffee icing. Sweet cotton candy carrot cake wafer. Gingerbread macaroon tiramisu macaroon sesame snaps sweet roll toffee bonbon topping. Icing candy canes carrot cake cookie chocolate cake powder bear claw. Danish unerdwear.com tiramisu cookie biscuit danish liquorice. Marzipan pie halvah. Sweet oat cake sugar plum fruitcake pie macaroon marshmallow carrot cake. Pastry bear claw jujubes dessert chocolate bar sesame snaps. Gingerbread applicake jelly-o candy chocolate marzipan. Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah  dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
             </div>
-            <div class="history_words">
-                <h4>Chocolate bar</h4>
-                <p><span>Donut</span> <span>Marzipan pie</span> <span>Jelly</span> <span>desset</span> <span>Sweet</span> <span>chupa chups</span> <span>Bonbon</span> <span>sesame</span> <span>muffin</span> <span>chocolate</span> <span>coffe</span> <span>gummi bears</span> <span>ice cream</span> <span>pudding</span> <span>Halvah cookie</span> <span>toffee</span> <span>gingerbread</span> <span>tea</span> <span>tiramisu</span> <span>sugar</span> <span>plum</span> <span>apple pie</span> <span>banana</span> <span>sesame snaps</span> <span>muffin</span> <span>lemon drops</span> <span>lollipop</span> <span>pear</span> <span>cookie</span> <span>caramels</span> <span>melon</span> <span>orange jelly</span> <span>sweet</span> <span>watermelon</span> <span>biscuit</span> <span>Soufle</span></p>
+            <div class="history_words col-sm-12 col-md-12 col-lg-12">
+                <h4 class="biggest">Chocolate bar</h4>
+                <p><span class="big">Donut</span> <span class="gray">Marzipan pie</span>
+                  <span class="black">Jelly</span> <span class="big">desset</span> <span class="biggest">Sweet</span>
+                  <span class="black">chupa chups</span> <span class="small">Bonbon</span>
+                  <span class="black">sesame</span> <span class="biggest">muffin</span> <span class="gray">chocolate</span>
+                  <span class="small">coffe</span> <span class="black">gummi bears</span>
+                  <span class="gray">ice cream</span> <span class="big">pudding</span> <span class="small">Halvah cookie</span>
+                  <span class="black">toffee</span> <span class="gray">gingerbread</span> <span class="black">tea</span>
+                  <span class="biggest">tiramisu</span> <span class="black">sugar</span>
+                  <span class="big">plum</span> <span class="black">apple pie</span>
+                  <span class="small">banana</span> <span class="gray">sesame snaps</span> <span class="biggest">muffin</span>
+                  <span class="biggest">lemon drops</span> <span class="big">lollipop</span>
+                  <span class="small">pear cookie</span> <span class="black">caramels</span>
+                  <span class="gray">melon</span> <span class="black">orange jelly</span>
+                  <span class="big">sweet</span> <span class="gray">watermelon</span> <span class="small">biscuit</span>
+                  <span class="gray">Soufle</span></p>
             </div>
         </div>
     </section>
