--- a/chocolate/index.html
+++ b/chocolate/index.html
@@ -62,29 +62,32 @@
             </div>
         </div>
     </section>
-    <section class="work">
-        <div class="main_width row">
-            <div class="work_descr">
-                <h3>Our work</h3>
-                <p class="work_par">Jelly beans jujubes candy cookie macaroon candy cheesecake.<br><br>Dessert wafer chupa chups chocolate cake halvah topping powder sesame snaps croissant. Applicake toffee sugar plum macaroon dragęe cheesecake icing powder. Unerdwear.com sesame snaps ice cream cotton candy.</p>
-            </div>
-            <div class="work_pic">
-                <img src="images/Layer 23.jpg" class="work_descr_img1"/>
-                <img src="images/Layer 22.jpg" class="work_descr_img2"/>
-                <img src="images/Layer 21.jpg" class="work_descr_img3"/>
-                <img src="images/Layer 20.jpg" class="work_descr_img4"/>
-                <img src="images/Layer 19.jpg" class="work_descr_img5"/>
-                <img src="images/Layer 18.jpg" class="work_descr_img6"/>
+    <section class="work row">
+        <div class="main_width col-sm-12 col-md-12 col-lg-12">
+            <div class="work row">
+              <div class="work_descr col-sm-6 col-md-4 col-lg-3">
+                  <h3>Our work</h3>
+                  <p class="work_par_small">Jelly beans jujubes candy cookie macaroon candy cheesecake.</p>
+                  <p class="work_par">Dessert wafer chupa chups chocolate cake halvah topping powder sesame snaps croissant. Applicake toffee sugar plum macaroon dragęe cheesecake icing powder. Unerdwear.com sesame snaps ice cream cotton candy.</p>
+              </div>
+              <div class="work_pic col-sm-6 col-md-8 col-lg-9">
+                  <img src="images/Layer 23.jpg" class="work_descr_img1"/>
+                  <img src="images/Layer 22.jpg" class="work_descr_img2"/>
+                  <img src="images/Layer 21.jpg" class="work_descr_img3"/>
+                  <img src="images/Layer 20.jpg" class="work_descr_img4"/>
+                  <img src="images/Layer 19.jpg" class="work_descr_img5"/>
+                  <img src="images/Layer 18.jpg" class="work_descr_img6"/>
+              </div>
             </div>
         </div>
     </section>
-    <section class="food">
-        <div class="food_intro main_width row">
+    <section class="food row">
+        <div class="food_intro main_width col-sm-12 col-md-12 col-lg-12">
             <h3>The best food in the world</h3>
             <p class="food_intro_par">Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
         </div>
-        <div class="food_background row"></div>
-        <div class="food_descr main_width row">
+        <div class="food_background col-sm-12 col-md-12 col-lg-12"></div>
+        <div class="food_descr main_width col-sm-12 col-md-12 col-lg-12">
             <div>
                 <p class="food_descr_par1">Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
                 <p class="food_descr_par2">Donut muffin tart cheesecake sesame snaps bear claw cheesecake lemon drops tart. Sesame snaps cupcake chocolate bar lemon drops jelly bear claw. Tart halvah dragęe chocolate caramels bear claw. Muffin macaroon candy canes.</p>
